--- a/modele_Finances_Locales.html
+++ b/modele_Finances_Locales.html
@@ -2,9 +2,10 @@
 <html dir="ltr" lang="fr">
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-  <title>Déploiement - paquets</title>
+  <title>Finances locales - Départements</title>
   <meta content="Thierry46" name="author">
-  <meta content="Page d'accès aux paquets de déploiement de l'outil Finances Locales" name="description">
+  <meta content="Page d'accès à la liste des départements produits par l'outil Finances Locales" name="description">
+  <meta name="keywords" content="Finances locales, communes, budget, département, taxes, taux, ratio, dépenses publiques, coûts">
 </head>
 <body>
 <table bgcolor="#ffccff" border="1" cellpadding="2" cellspacing="2" height="202" width="100%">
@@ -14,7 +15,7 @@
       <td valign="top"><a href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"><img alt="Logo outil Finances locales" src="licence_logo/finances_locales_logo.png" align="middle" border="2" height="120" hspace="10" vspace="10" width="120"></a></td>
       <td valign="top">
       <h1 align="center">Projet Finances Locales</h1>
-      <h1 align="center">Paquets de déploiement<br>
+      <h1 align="center">Départements disponibles<br>
       </h1>
       </td>
       <td valign="top"><a href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"><img alt="Logo outil Finances locales" src="licence_logo/finances_locales_logo.png" align="middle" border="2" height="120" hspace="10" vspace="10" width="120"></a></td>
@@ -33,35 +34,34 @@
 
 <b>Licence Projet</b> : <a href="http://www.gnu.org/licenses" target="_blank">GNU GPL version 3</a><br>
 <br>
+<hr size="2" width="100%">
+Pour constituer chaque page communale, l'outil ++OUTIL_NOM++
+a effectué la synthèse de plus de cent&nbsp;pages du site ++URL_BASE++.<br/>
+Finances locales est un <a href="https://fr.wikipedia.org/wiki/logiciels_libres" target="_blank">logiciel libre</a>
+distribué en <a href="https://fr.wikipedia.org/wiki/copyleft" target="_blank">copyleft</a> sous
+<a href="https://fr.wikipedia.org/wiki/licence_(juridique)" target="_blank">licence</a>
+<a href="https://fr.wikipedia.org/wiki/Licence_publique_générale_GNU" target="_blank">GNU GPL version 3</a>.
 
 <hr size="2" width="100%"><br>
 
-<font color="red">SVP</font> : lisez la <a href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales#Comment_modifier_les_articles_des_communes" target="_blank">notice de déploiement</a>.<br>
-
-En cas de problème, laissez un message sur la <a href="https://fr.wikipedia.org/wiki/Discussion_utilisateur:Thierry46/Finances_Locales" target="_blank">page de discussion du projet.</a><br>
-
-<hr size="2" width="100%"><br>
-
-<h2>Liste des paquets disponibles</h2>
+<h2>Liste des départements disponibles</h2>
+Si vous ne trouvez pas une commune, n'hésitez pas à me contacter : <a href="mailto:Thierry.MaillardCinqcents@orange.fr">Thierry.MaillardCinqcents@orange.fr</a>
+- (Ecrivez Cinqcents en chiffres).
 <table border="1" cellpadding="2" cellspacing="2" height="68" width="100%">
   <tbody>
     <tr>
       <th align="left" bgcolor="#ccffff">Départements<br>
       </th>
-      <th align="left" bgcolor="#ccffff">Fichiers d'archive zip des communes<br>
-      </th>
       <th align="left" bgcolor="#ccffff">Dates de création<br>
       </th>
     </tr>
-++LIGNES_PAQUETS++
+++LIGNES_DEPARTEMENTS++
   </tbody>
 </table>
 
 <br>
 <hr size="2" width="100%"><br>
-
-Copyleft (c) <b>2015 - <a href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales" target="_top">Projet Finances Locales</a></b><br>
-
+Copyleft (c) <b>2015 - <a href="http://thierry.maillard.pagesperso-orange.fr"  target="_blank">site de Thierry Maillard</a></b><br>
 Permission vous est donnée de copier, distribuer et/ou
 modifier ce document selon les termes de la Licence <b>GNU Free
 Documentation License</b>, Version 1.3 ou ultérieure publiée
