--- a/modele_index_ville_HTML.html
+++ b/modele_index_ville_HTML.html
@@ -33,10 +33,8 @@ en HTML pour consultation directe.</li>
 <li>Le <i>Wikicode</i> doit être considéré comme une ressource pour compléter Wikipédia.
 Il faut cependant éviter de copier l'ensemble du wikicode dans un article,
 mais prendre les parties les plus pertinentes en les référençant avec des
-sources secondaires (journaux par exemple), pour relier les donnèes primaires
+sources secondaires (journaux par exemple), pour relier les données primaires
 du Ministère des finances avec des faits réels.</li>
-<li><i>Valeur totale (CSV)</i> fournit un tableau des chiffres brut en Euros des valeurs total pour chaque
-grandeurs financières et pour chaque année présente dans la base Alize2.</li>
 <li><i>Par habitant (CSV)</i> idem pour les ratios Valeur totale / nombre d'habitant.</li>
 <li><i>Moyenne strate (CSV)</i> valeurs totales moyennes pour les communes appartenant à
 la même strate fiscale.</li>
@@ -50,36 +48,18 @@ Le séparateur de colonne est le caractère point-virgule, celui des décimales 
   <tbody>
     <tr>
       <th bgcolor="#ccffff" valign="top">Finances locales<br>
-      </td>
+      </thd>
       <th bgcolor="#ccffff" valign="top">Wikicode<br>
-      </td>
-      <th bgcolor="#ccffff" valign="top">Valeur totale (CSV)<br>
-      </td>
-      <th bgcolor="#ccffff" valign="top">Par habitant (CSV)<br>
-      </td>
-      <th bgcolor="#ccffff" valign="top">Moyenne strate (CSV)<br>
-      </td>
+      </tthd>
       <th bgcolor="#ccffff" valign="top">Score<br>
       </th>
-      <th bgcolor="#ccffff" valign="top">Avancement<br>
-      </th>
-      <th bgcolor="#ccffff" valign="top">CDF<br>
-      </th>
-      <th bgcolor="#ccffff" valign="top">VDM<br>
-      </th>
-      <th bgcolor="#ccffff" valign="top">Popul.<br>
+      <th bgcolor="#ccffff" valign="top">Population<br>
       </th>
     </tr>
 ++LIGNES_VILLES++
     </tbody>
 </table>
 <p>Abbréviations :</p>
-<ul>
-    <li>Eval : <a href="https://fr.wikipedia.org/wiki/Projet:Communes_de_France/%C3%89valuation" target="_blank">évaluation</a> d'avancement Wikipédia;</li>
-    <li>CDF : importance commune de France ;</li>
-    <li>VDM : importance ville du monde ;</li>
-    <li>Popul. : Popularité de l'article Wikipédia.</li>
-</ul>
 Si vous ne trouvez pas une commune, n'hésitez pas à me contacter : <a href="mailto:Thierry.MaillardCinqcents@orange.fr">Thierry.MaillardCinqcents@orange.fr</a>
 - (Ecrivez Cinqcents en chiffres).
 
