Update generation models

--- a/modele_index_ville_HTML.html
+++ b/modele_index_ville_HTML.html
@@ -64,7 +64,7 @@ Si vous ne trouvez pas une commune, n'hésitez pas à me contacter : <a href="ma
 - (Ecrivez Cinqcents en chiffres).
 
 <hr size="2" width="100%"><br>
-Copyleft (c) <b>2015 - <a href="http://thierry.maillard.pagesperso-orange.fr"  target="_blank">site de Thierry Maillard</a></b><br>
+Copyleft (c) <b>2015 - 2020 - <a href="http://thierry.maillard.pagesperso-orange.fr"  target="_blank">site de Thierry Maillard</a></b><br>
 Permission vous est donnée de copier, distribuer et/ou
 modifier ce document selon les termes de la Licence <b>GNU Free
 Documentation License</b>, Version 1.3 ou ultérieure publiée
