--- a/notice.html
+++ b/notice.html
@@ -142,7 +142,7 @@ remboursement du capital de la dette.</LI>
 </UL>
 
 <hr size="2" width="100%"><br>
-Copyleft (c) <b>2015 - <a href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"  target="_blank">Projet Finances Locales</a></b><br>
+Copyleft (c) <b>2015 - 2020 - <a href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"  target="_blank">Projet Finances Locales</a></b><br>
 Permission vous est donnée de copier, distribuer et/ou
 modifier ce document selon les termes de la Licence <b>GNU Free
 Documentation License</b>, Version 1.3 ou ultérieure publiée
