fix problems with unittest : dependancy to environment

--- a/unittest/repGenCodeGroupementOutput/Groupements/Communaute_de_communes_des_Portes_de_Sologne/Communaute_de_communes_des_Portes_de_Sologne_HTML.html
+++ b/unittest/repGenCodeGroupementOutput/Groupements/Communaute_de_communes_des_Portes_de_Sologne/Communaute_de_communes_des_Portes_de_Sologne_HTML.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html dir="ltr" lang="fr">
 <!-- !!! Contenu généré automatiquement par l'outil Finances locales !!!
-    Généré le 04 July 2020 par le programme genCodeGroupement.py (complet)
-    version 4.0.0 : Yin Yang Tau du 2/7/2020
+    Généré le 03 November 2021 par le programme genCodeGroupement.py (complet)
+    version 4.0.1 : Yin Yang Tau du 4/7/2020
     et le modèle modele_groupement_HTML.txt pour l'article <NOM_ARTICLE_DETAIL>.
     En cas de problème, contactez-moi SVP : Thierry.Maillard500(at)orange.fr
     Additionnons nos forces, partageons nos connaissances ! -->
@@ -157,7 +157,7 @@ des <a href="https://fr.wikipedia.org/wiki/subventions" target="_blank">subventi
 des charges financières <sup><a href="../../notice.html#Note_9">Note 9</a></sup> pour 3&nbsp;% et
 finalement celui <LIBELLE_CHARGE5> <NOTE_CHARGE5> pour <VALEUR_CHARGE_PC5> ;</LI>
 <LI>la plus grande part des <a href="https://fr.wikipedia.org/wiki/Recettes publiques" target="_blank">recettes</a>
-est constituée des <a href="https://fr.wikipedia.org/wiki/Impôts locaux en France" target="_blank">impôts locaux</a><sup><a href="../../notice.html#Note_12">Note 12</a></sup> pour une somme de 5329000&nbsp;€ (82&nbsp;%), soit 340&nbsp;€ par habitant, ratio . <VALEUR_RECETTE_TENDANCE_SERIE1>.
+est constituée des <a href="https://fr.wikipedia.org/wiki/Impôts locaux en France" target="_blank">impôts locaux</a><sup><a href="../../notice.html#Note_12">Note 12</a></sup> pour un montant de 5329000&nbsp;€ (82&nbsp;%), soit 340&nbsp;€ par habitant, ratio . <VALEUR_RECETTE_TENDANCE_SERIE1>.
 Viennent ensuite des <a href="https://fr.wikipedia.org/wiki/Impôts locaux en France" target="_blank">autres impôts</a> <sup><a href="../../notice.html#Note_14">Note 14</a></sup>) pour 26&nbsp;% et
 de la <a href="https://fr.wikipedia.org/wiki/dotation globale de fonctionnement" target="_blank">dotation globale de fonctionnement</a> (DGF) <sup><a href="../../notice.html#Note_13">Note 13</a></sup> pour 4&nbsp;%.</LI>
 </UL>
@@ -327,14 +327,14 @@ Cette section détaille les <a href="https://fr.wikipedia.org/wiki/investissemen
 
 Les emplois d'investissement en 2018 comprenaient par ordre d'importance :
 <UL>
-<LI>des dépenses d'équipement<sup><a href="../../notice.html#Note_16">Note 16</a></sup> pour  1141000&nbsp;€ (66&nbsp;%), soit 73&nbsp;€ par habitant, ratio . <VALEUR_EMPLOI_INVEST_TENDANCE_SERIE1> ;</LI>
-<LI>des <a href="https://fr.wikipedia.org/wiki/Plan de remboursement" target="_blank">remboursements</a> d'emprunts<sup><a href="../../notice.html#Note_17">Note 17</a></sup> pour une valeur de 276000&nbsp;€ (16&nbsp;%), soit 18&nbsp;€ par habitant, ratio .</LI>
+<LI>des dépenses d'équipement<sup><a href="../../notice.html#Note_16">Note 16</a></sup> pour une somme de 1141000&nbsp;€ (66&nbsp;%), soit 73&nbsp;€ par habitant, ratio . <VALEUR_EMPLOI_INVEST_TENDANCE_SERIE1> ;</LI>
+<LI>des <a href="https://fr.wikipedia.org/wiki/Plan de remboursement" target="_blank">remboursements</a> d'emprunts<sup><a href="../../notice.html#Note_17">Note 17</a></sup> pour une valeur totale de 276000&nbsp;€ (16&nbsp;%), soit 18&nbsp;€ par habitant, ratio .</LI>
 </UL>
 
 Les ressources en investissement de la Communauté de communes des Portes de Sologne se répartissent principalement en :
 <UL>
-<LI><a href="https://fr.wikipedia.org/wiki/fonds de Compensation pour la TVA" target="_blank">fonds de Compensation pour la TVA</a> pour une somme de 222000&nbsp;€ (13&nbsp;%), soit 14&nbsp;€ par habitant, ratio . <VALEUR_RESSOURCES_INVEST_TENDANCE_SERIE1> ;</LI>
-<LI><a href="https://fr.wikipedia.org/wiki/subventions" target="_blank">subventions</a> reçues pour une somme de 206000&nbsp;€ (12&nbsp;%), soit 13&nbsp;€ par habitant, ratio .</LI>
+<LI><a href="https://fr.wikipedia.org/wiki/fonds de Compensation pour la TVA" target="_blank">fonds de Compensation pour la TVA</a> pour  222000&nbsp;€ (13&nbsp;%), soit 14&nbsp;€ par habitant, ratio . <VALEUR_RESSOURCES_INVEST_TENDANCE_SERIE1> ;</LI>
+<LI><a href="https://fr.wikipedia.org/wiki/subventions" target="_blank">subventions</a> reçues pour une valeur de 206000&nbsp;€ (12&nbsp;%), soit 13&nbsp;€ par habitant, ratio .</LI>
 </UL>
 
 <h3>Évolution de l'investissement de 2018 à 2018</h3>
@@ -406,9 +406,9 @@ l'encours de la dette<sup><a href="../../notice.html#Note_4" target="_blank">Not
 l'annuité de la dette<sup><a href="../../notice.html#Note_5" target="_blank">Note 5</a></sup> et sa
 capacité de désendettement<sup><a href="../../notice.html#Note_5" target="_blank">Note 5</a></sup> :
 <UL>
-<LI>l'encours de la dette pour un montant de 4284000&nbsp;€, soit 274&nbsp;€ par habitant, ratio . <VALEUR_ENCOURS_DETTE_TENDANCE_SERIE1><sup> ;</LI>
+<LI>l'encours de la dette pour une valeur de 4284000&nbsp;€, soit 274&nbsp;€ par habitant, ratio . <VALEUR_ENCOURS_DETTE_TENDANCE_SERIE1><sup> ;</LI>
 <LI>l'annuité de la dette pour un montant de 433000&nbsp;€, soit 28&nbsp;€ par habitant, ratio . <VALEUR_ANNUITE_DETTE_TENDANCE_SERIE1><sup> ;</LI>
-<LI>la <a href="https://fr.wikipedia.org/wiki/capacité d'autofinancement" target="_blank">capacité d'autofinancement</a> (CAF) pour un montant de 1855000&nbsp;€, soit 119&nbsp;€ par habitant, ratio . <VALEUR_CAF_TENDANCE_SERIE1>.
+<LI>la <a href="https://fr.wikipedia.org/wiki/capacité d'autofinancement" target="_blank">capacité d'autofinancement</a> (CAF) pour une valeur totale de 1855000&nbsp;€, soit 119&nbsp;€ par habitant, ratio . <VALEUR_CAF_TENDANCE_SERIE1>.
 La capacité de <a href="https://fr.wikipedia.org/wiki/Dette publique" target="_blank">désendettement</a>
 est d'environ 2 années en 2018. Sur une période de 1 années, ce ratio est constant et faible (inférieur à 4 ans)</LI>
 </UL>
@@ -455,8 +455,8 @@ modifier ce document selon les termes de la Licence <b>GNU Free
 Documentation License</b>, Version 1.3 ou ultérieure publiée
 par la Free Software Foundation&nbsp;avec les sections inaltérables
 suivantes&nbsp;: <a href="http://www.gnu.org/licenses/fdl.html" target="_blank">GNU Free Documentation License</a>.<br>
-<!-- Fin de la page générée le 04 July 2020
-    par le programme genCodeGroupement.py complet version 4.0.0 : Yin Yang Tau 
+<!-- Fin de la page générée le 03 November 2021
+    par le programme genCodeGroupement.py complet version 4.0.1 : Yin Yang Tau 
     et le modèle modele_groupement_HTML.txt pour l'article <NOM_ARTICLE_DETAIL>.
     En cas de problème, contactez-moi SVP : Thierry.Maillard500(at)orange.fr -->
 </body>
