Quality : correct pylint warnings

--- a/unittest/repGenCodeOutput/Departement_068/Wittenheim/Wittenheim.html
+++ b/unittest/repGenCodeOutput/Departement_068/Wittenheim/Wittenheim.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html dir="ltr" lang="fr">
 <!-- !!! Contenu généré automatiquement par l'outil Finances locales !!!
-    Généré le 03 November 2021 par le programme genCode.py (complet)
+    Généré le 15 November 2021 par le programme genCode.py (complet)
     version 4.0.1 : Yin Yang Tau du 4/7/2020
     et le modèle modele_page_HTML.txt pour l'article Finances de la commune de Wittenheim.
     En cas de problème, contactez-moi SVP : Thierry.Maillard500(at)orange.fr
@@ -244,13 +244,13 @@ soit un solde de la section de fonctionnement de 190750&nbsp;€ (13&nbsp;€ pa
   :
 <UL>
 <LI>le principal pôle de <a href="https://fr.wikipedia.org/wiki/Dépenses_publiques" target="_blank">dépenses</a>
-de fonctionnement est celui des <a href="https://fr.wikipedia.org/wiki/Charge (comptabilité)" target="_blank">charges</a> de personnels<sup><a href="../../notice.html#Note_7">Note 7</a></sup> pour  6932000&nbsp;€ (55&nbsp;%), soit 470&nbsp;€ par habitant, ratio inférieur de 29 % à la valeur moyenne pour les communes de la même strate (664&nbsp;€ par habitant). En partant de 2013 et jusqu'à 2015, ce ratio fluctue et présente un minimum de 444&nbsp;€ par habitant en 2013 et un maximum de 470&nbsp;€ par habitant en 2014.</LI>
+de fonctionnement est celui des <a href="https://fr.wikipedia.org/wiki/Charge (comptabilité)" target="_blank">charges</a> de personnels<sup><a href="../../notice.html#Note_7">Note 7</a></sup> pour un montant de 6932000&nbsp;€ (55&nbsp;%), soit 470&nbsp;€ par habitant, ratio inférieur de 29 % à la valeur moyenne pour les communes de la même strate (664&nbsp;€ par habitant). Depuis 3 ans, ce ratio fluctue et présente un minimum de 444&nbsp;€ par habitant en 2013 et un maximum de 470&nbsp;€ par habitant en 2014.</LI>
 Viennent ensuite les groupes des <a href="https://fr.wikipedia.org/wiki/achats" target="_blank">achats</a> et charges externes <sup><a href="../../notice.html#Note_8">Note 8</a></sup> pour 19&nbsp;%,
 des <a href="https://fr.wikipedia.org/wiki/subventions" target="_blank">subventions</a> versées <sup><a href="../../notice.html#Note_10">Note 10</a></sup> pour 10&nbsp;%,
 des contingents <sup><a href="../../notice.html#Note_11">Note 11</a></sup> pour 3&nbsp;% et
 finalement celui des charges financières <sup><a href="../../notice.html#Note_9">Note 9</a></sup> pour 2&nbsp;% ;</LI>
 <LI>la plus grande part des <a href="https://fr.wikipedia.org/wiki/Recettes publiques" target="_blank">recettes</a>
-est constituée des <a href="https://fr.wikipedia.org/wiki/Impôts locaux en France" target="_blank">impôts locaux</a><sup><a href="../../notice.html#Note_12">Note 12</a></sup> pour  5109000&nbsp;€ (40&nbsp;%), soit 346&nbsp;€ par habitant, ratio inférieur de 35 % à la valeur moyenne pour les communes de la même strate (532&nbsp;€ par habitant). Sur les 3 dernières années, ce ratio augmente de façon continue de 324&nbsp;€ à 346&nbsp;€ par habitant.
+est constituée des <a href="https://fr.wikipedia.org/wiki/Impôts locaux en France" target="_blank">impôts locaux</a><sup><a href="../../notice.html#Note_12">Note 12</a></sup> pour une valeur totale de 5109000&nbsp;€ (40&nbsp;%), soit 346&nbsp;€ par habitant, ratio inférieur de 35 % à la valeur moyenne pour les communes de la même strate (532&nbsp;€ par habitant). En partant de 2013 et jusqu'à 2015, ce ratio augmente de façon continue de 324&nbsp;€ à 346&nbsp;€ par habitant.
 Viennent ensuite de la <a href="https://fr.wikipedia.org/wiki/dotation globale de fonctionnement" target="_blank">dotation globale de fonctionnement</a> (DGF) <sup><a href="../../notice.html#Note_13">Note 13</a></sup>) pour 22&nbsp;% et
 des <a href="https://fr.wikipedia.org/wiki/Impôts locaux en France" target="_blank">autres impôts</a> <sup><a href="../../notice.html#Note_14">Note 14</a></sup> pour 10&nbsp;%.</LI>
 </UL>
@@ -527,14 +527,14 @@ Cette section détaille les <a href="https://fr.wikipedia.org/wiki/investissemen
 
 Les emplois d'investissement en 2015 comprenaient par ordre d'importance :
 <UL>
-<LI>des dépenses d'équipement<sup><a href="../../notice.html#Note_16">Note 16</a></sup> pour une valeur totale de 4323000&nbsp;€ (62&nbsp;%), soit 293&nbsp;€ par habitant, ratio voisin de la valeur moyenne de la strate. Sur les 3 dernières années, ce ratio fluctue et présente un minimum de 293&nbsp;€ par habitant en 2015 et un maximum de 508&nbsp;€ par habitant en 2014 ;</LI>
-<LI>des <a href="https://fr.wikipedia.org/wiki/Plan de remboursement" target="_blank">remboursements</a> d'emprunts<sup><a href="../../notice.html#Note_17">Note 17</a></sup> pour une somme de 938000&nbsp;€ (13&nbsp;%), soit 64&nbsp;€ par habitant, ratio inférieur de 31 % à la valeur moyenne pour les communes de la même strate (93&nbsp;€ par habitant).</LI>
+<LI>des dépenses d'équipement<sup><a href="../../notice.html#Note_16">Note 16</a></sup> pour une valeur totale de 4323000&nbsp;€ (62&nbsp;%), soit 293&nbsp;€ par habitant, ratio voisin de la valeur moyenne de la strate. En partant de 2013 et jusqu'à 2015, ce ratio fluctue et présente un minimum de 293&nbsp;€ par habitant en 2015 et un maximum de 508&nbsp;€ par habitant en 2014 ;</LI>
+<LI>des <a href="https://fr.wikipedia.org/wiki/Plan de remboursement" target="_blank">remboursements</a> d'emprunts<sup><a href="../../notice.html#Note_17">Note 17</a></sup> pour une valeur totale de 938000&nbsp;€ (13&nbsp;%), soit 64&nbsp;€ par habitant, ratio inférieur de 31 % à la valeur moyenne pour les communes de la même strate (93&nbsp;€ par habitant).</LI>
 </UL>
 
 Les ressources en investissement de Wittenheim se répartissent principalement en :
 <UL>
-<LI><a href="https://fr.wikipedia.org/wiki/Emprunt (finance)" target="_blank">nouvelles dettes</a> pour  2047000&nbsp;€ (24&nbsp;%), soit 139&nbsp;€ par habitant, ratio supérieur de 76 % à la valeur moyenne pour les communes de la même strate (79&nbsp;€ par habitant). Depuis 3 ans, ce ratio fluctue et présente un minimum de 138&nbsp;€ par habitant en 2015 et un maximum de 248&nbsp;€ par habitant en 2014 ;</LI>
-<LI><a href="https://fr.wikipedia.org/wiki/subventions" target="_blank">subventions</a> reçues pour un montant de 2024000&nbsp;€ (23&nbsp;%), soit 137&nbsp;€ par habitant, ratio supérieur de 125 % à la valeur moyenne pour les communes de la même strate (61&nbsp;€ par habitant).</LI>
+<LI><a href="https://fr.wikipedia.org/wiki/Emprunt (finance)" target="_blank">nouvelles dettes</a> pour une valeur totale de 2047000&nbsp;€ (24&nbsp;%), soit 139&nbsp;€ par habitant, ratio supérieur de 76 % à la valeur moyenne pour les communes de la même strate (79&nbsp;€ par habitant). En partant de 2013 et jusqu'à 2015, ce ratio fluctue et présente un minimum de 138&nbsp;€ par habitant en 2015 et un maximum de 248&nbsp;€ par habitant en 2014 ;</LI>
+<LI><a href="https://fr.wikipedia.org/wiki/subventions" target="_blank">subventions</a> reçues pour une valeur de 2024000&nbsp;€ (23&nbsp;%), soit 137&nbsp;€ par habitant, ratio supérieur de 125 % à la valeur moyenne pour les communes de la même strate (61&nbsp;€ par habitant).</LI>
 </UL>
 
 <h3>Évolution de l'investissement de 2013 à 2015</h3>
@@ -645,9 +645,9 @@ l'encours de la dette<sup><a href="../../notice.html#Note_4" target="_blank">Not
 l'annuité de la dette<sup><a href="../../notice.html#Note_5" target="_blank">Note 5</a></sup> et sa
 capacité de désendettement<sup><a href="../../notice.html#Note_5" target="_blank">Note 5</a></sup> :
 <UL>
-<LI>l'encours de la dette pour une somme de 10817000&nbsp;€, soit 734&nbsp;€ par habitant, ratio inférieur de 22 % à la valeur moyenne pour les communes de la même strate (944&nbsp;€ par habitant). Sur les 3 dernières années, ce ratio augmente de façon continue de 479&nbsp;€ à 733&nbsp;€ par habitant<sup> ;</LI>
-<LI>l'annuité de la dette pour une valeur totale de 1175000&nbsp;€, soit 80&nbsp;€ par habitant, ratio inférieur de 35 % à la valeur moyenne pour les communes de la même strate (124&nbsp;€ par habitant). Sur les 3 dernières années, ce ratio augmente de façon continue de 56&nbsp;€ à 79&nbsp;€ par habitant<sup> ;</LI>
-<LI>la <a href="https://fr.wikipedia.org/wiki/capacité d'autofinancement" target="_blank">capacité d'autofinancement</a> (CAF) pour une valeur totale de 1183000&nbsp;€, soit 80&nbsp;€ par habitant, ratio inférieur de 56 % à la valeur moyenne pour les communes de la même strate (183&nbsp;€ par habitant). Sur la période 2013 - 2015, ce ratio fluctue et présente un minimum de 50&nbsp;€ par habitant en 2014 et un maximum de 80&nbsp;€ par habitant en 2015.
+<LI>l'encours de la dette pour  10817000&nbsp;€, soit 734&nbsp;€ par habitant, ratio inférieur de 22 % à la valeur moyenne pour les communes de la même strate (944&nbsp;€ par habitant). En partant de 2013 et jusqu'à 2015, ce ratio augmente de façon continue de 479&nbsp;€ à 733&nbsp;€ par habitant<sup> ;</LI>
+<LI>l'annuité de la dette pour une valeur de 1175000&nbsp;€, soit 80&nbsp;€ par habitant, ratio inférieur de 35 % à la valeur moyenne pour les communes de la même strate (124&nbsp;€ par habitant). Sur la période 2013 - 2015, ce ratio augmente de façon continue de 56&nbsp;€ à 79&nbsp;€ par habitant<sup> ;</LI>
+<LI>la <a href="https://fr.wikipedia.org/wiki/capacité d'autofinancement" target="_blank">capacité d'autofinancement</a> (CAF) pour  1183000&nbsp;€, soit 80&nbsp;€ par habitant, ratio inférieur de 56 % à la valeur moyenne pour les communes de la même strate (183&nbsp;€ par habitant). Pour la période allant de 2013 à 2015, ce ratio fluctue et présente un minimum de 50&nbsp;€ par habitant en 2014 et un maximum de 80&nbsp;€ par habitant en 2015.
 La capacité de <a href="https://fr.wikipedia.org/wiki/Dette publique" target="_blank">désendettement</a>
 est d'environ 9 années en 2015. Sur une période de 3 années, ce ratio présente un minimum en 2013 et un maximum d'environ 13 années en 2014.</LI>
 </UL>
@@ -717,7 +717,7 @@ modifier ce document selon les termes de la Licence <b>GNU Free
 Documentation License</b>, Version 1.3 ou ultérieure publiée
 par la Free Software Foundation&nbsp;avec les sections inaltérables
 suivantes&nbsp;: <a href="http://www.gnu.org/licenses/fdl.html" target="_blank">GNU Free Documentation License</a>.<br>
-<!-- Fin de la page générée le 03 November 2021
+<!-- Fin de la page générée le 15 November 2021
     par le programme genCode.py complet version 4.0.1 : Yin Yang Tau 
     et le modèle modele_page_HTML.txt pour l'article Finances de la commune de Wittenheim.
     En cas de problème, contactez-moi SVP : Thierry.Maillard500(at)orange.fr -->
