--- a/unittest/repGenCodeGroupementOutput/Groupements/Communaute_de_communes_des_Portes_de_Sologne/Communaute_de_communes_des_Portes_de_Sologne_HTML.html
+++ b/unittest/repGenCodeGroupementOutput/Groupements/Communaute_de_communes_des_Portes_de_Sologne/Communaute_de_communes_des_Portes_de_Sologne_HTML.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html dir="ltr" lang="fr">
 <!-- !!! Contenu généré automatiquement par l'outil Finances locales !!!
-    Généré le 15 November 2021 par le programme genCodeGroupement.py (complet)
+    Généré le 09 December 2021 par le programme genCodeGroupement.py (complet)
     version 4.0.1 : Yin Yang Tau du 4/7/2020
     et le modèle modele_groupement_HTML.txt pour l'article <NOM_ARTICLE_DETAIL>.
     En cas de problème, contactez-moi SVP : Thierry.Maillard500(at)orange.fr
@@ -151,7 +151,7 @@ soit un solde de la section de fonctionnement de 1695000&nbsp;€ (108&nbsp;€ 
   :
 <UL>
 <LI>le principal pôle de <a href="https://fr.wikipedia.org/wiki/Dépenses_publiques" target="_blank">dépenses</a>
-de fonctionnement est celui des <a href="https://fr.wikipedia.org/wiki/achats" target="_blank">achats</a> et charges externes<sup><a href="../../notice.html#Note_8">Note 8</a></sup> pour  1204000&nbsp;€ (25&nbsp;%), soit 77&nbsp;€ par habitant, ratio . <VALEUR_CHARGE_TENDANCE_SERIE1>.</LI>
+de fonctionnement est celui des <a href="https://fr.wikipedia.org/wiki/achats" target="_blank">achats</a> et charges externes<sup><a href="../../notice.html#Note_8">Note 8</a></sup> pour une valeur de 1204000&nbsp;€ (25&nbsp;%), soit 77&nbsp;€ par habitant, ratio . <VALEUR_CHARGE_TENDANCE_SERIE1>.</LI>
 Viennent ensuite les groupes des <a href="https://fr.wikipedia.org/wiki/Charge (comptabilité)" target="_blank">charges</a> de personnels <sup><a href="../../notice.html#Note_7">Note 7</a></sup> pour 24&nbsp;%,
 des <a href="https://fr.wikipedia.org/wiki/subventions" target="_blank">subventions</a> versées <sup><a href="../../notice.html#Note_10">Note 10</a></sup> pour 4&nbsp;%,
 des charges financières <sup><a href="../../notice.html#Note_9">Note 9</a></sup> pour 3&nbsp;% et
@@ -327,13 +327,13 @@ Cette section détaille les <a href="https://fr.wikipedia.org/wiki/investissemen
 
 Les emplois d'investissement en 2018 comprenaient par ordre d'importance :
 <UL>
-<LI>des dépenses d'équipement<sup><a href="../../notice.html#Note_16">Note 16</a></sup> pour une valeur de 1141000&nbsp;€ (66&nbsp;%), soit 73&nbsp;€ par habitant, ratio . <VALEUR_EMPLOI_INVEST_TENDANCE_SERIE1> ;</LI>
-<LI>des <a href="https://fr.wikipedia.org/wiki/Plan de remboursement" target="_blank">remboursements</a> d'emprunts<sup><a href="../../notice.html#Note_17">Note 17</a></sup> pour une valeur de 276000&nbsp;€ (16&nbsp;%), soit 18&nbsp;€ par habitant, ratio .</LI>
+<LI>des dépenses d'équipement<sup><a href="../../notice.html#Note_16">Note 16</a></sup> pour une valeur totale de 1141000&nbsp;€ (66&nbsp;%), soit 73&nbsp;€ par habitant, ratio . <VALEUR_EMPLOI_INVEST_TENDANCE_SERIE1> ;</LI>
+<LI>des <a href="https://fr.wikipedia.org/wiki/Plan de remboursement" target="_blank">remboursements</a> d'emprunts<sup><a href="../../notice.html#Note_17">Note 17</a></sup> pour une valeur totale de 276000&nbsp;€ (16&nbsp;%), soit 18&nbsp;€ par habitant, ratio .</LI>
 </UL>
 
 Les ressources en investissement de la Communauté de communes des Portes de Sologne se répartissent principalement en :
 <UL>
-<LI><a href="https://fr.wikipedia.org/wiki/fonds de Compensation pour la TVA" target="_blank">fonds de Compensation pour la TVA</a> pour une valeur de 222000&nbsp;€ (13&nbsp;%), soit 14&nbsp;€ par habitant, ratio . <VALEUR_RESSOURCES_INVEST_TENDANCE_SERIE1> ;</LI>
+<LI><a href="https://fr.wikipedia.org/wiki/fonds de Compensation pour la TVA" target="_blank">fonds de Compensation pour la TVA</a> pour un montant de 222000&nbsp;€ (13&nbsp;%), soit 14&nbsp;€ par habitant, ratio . <VALEUR_RESSOURCES_INVEST_TENDANCE_SERIE1> ;</LI>
 <LI><a href="https://fr.wikipedia.org/wiki/subventions" target="_blank">subventions</a> reçues pour  206000&nbsp;€ (12&nbsp;%), soit 13&nbsp;€ par habitant, ratio .</LI>
 </UL>
 
@@ -407,8 +407,8 @@ l'annuité de la dette<sup><a href="../../notice.html#Note_5" target="_blank">No
 capacité de désendettement<sup><a href="../../notice.html#Note_5" target="_blank">Note 5</a></sup> :
 <UL>
 <LI>l'encours de la dette pour une somme de 4284000&nbsp;€, soit 274&nbsp;€ par habitant, ratio . <VALEUR_ENCOURS_DETTE_TENDANCE_SERIE1><sup> ;</LI>
-<LI>l'annuité de la dette pour une valeur de 433000&nbsp;€, soit 28&nbsp;€ par habitant, ratio . <VALEUR_ANNUITE_DETTE_TENDANCE_SERIE1><sup> ;</LI>
-<LI>la <a href="https://fr.wikipedia.org/wiki/capacité d'autofinancement" target="_blank">capacité d'autofinancement</a> (CAF) pour une valeur totale de 1855000&nbsp;€, soit 119&nbsp;€ par habitant, ratio . <VALEUR_CAF_TENDANCE_SERIE1>.
+<LI>l'annuité de la dette pour une valeur totale de 433000&nbsp;€, soit 28&nbsp;€ par habitant, ratio . <VALEUR_ANNUITE_DETTE_TENDANCE_SERIE1><sup> ;</LI>
+<LI>la <a href="https://fr.wikipedia.org/wiki/capacité d'autofinancement" target="_blank">capacité d'autofinancement</a> (CAF) pour  1855000&nbsp;€, soit 119&nbsp;€ par habitant, ratio . <VALEUR_CAF_TENDANCE_SERIE1>.
 La capacité de <a href="https://fr.wikipedia.org/wiki/Dette publique" target="_blank">désendettement</a>
 est d'environ 2 années en 2018. Sur une période de 1 années, ce ratio est constant et faible (inférieur à 4 ans)</LI>
 </UL>
@@ -455,7 +455,7 @@ modifier ce document selon les termes de la Licence <b>GNU Free
 Documentation License</b>, Version 1.3 ou ultérieure publiée
 par la Free Software Foundation&nbsp;avec les sections inaltérables
 suivantes&nbsp;: <a href="http://www.gnu.org/licenses/fdl.html" target="_blank">GNU Free Documentation License</a>.<br>
-<!-- Fin de la page générée le 15 November 2021
+<!-- Fin de la page générée le 09 December 2021
     par le programme genCodeGroupement.py complet version 4.0.1 : Yin Yang Tau 
     et le modèle modele_groupement_HTML.txt pour l'article <NOM_ARTICLE_DETAIL>.
     En cas de problème, contactez-moi SVP : Thierry.Maillard500(at)orange.fr -->
