--- a/modele_index_groupement_HTML.html
+++ b/modele_index_groupement_HTML.html
@@ -1,70 +1,98 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html dir="ltr" lang="fr"><head>
-  <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-  <title>Groupements</title></head><body>
-  <meta content="Thierry46" name="author">
-  <meta content="Page d'accès à la liste des groupements de communes" name="description">
-  <meta name="keywords" content="Finances locales, budget, groupements de communes, taxes, taux, ratio, dépenses publiques, coûts">
-<table bgcolor="#ffccff" border="1" cellpadding="2" cellspacing="2" height="202" width="100%">
-  <tbody>
-    <tr>
-      <td valign="top"><a href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"><img alt="Logo outil Finances locales" src="../licence_logo/finances_locales_logo.png" align="middle" border="2" height="120" hspace="10" vspace="10" width="120"></a></td>
-      <td valign="top">
-      <h1 align="center">Projet Finances Locales</h1>
-      <h1 align="center">Groupements de communes</h1>
-      </td>
-      <td valign="top"><a href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"><img alt="Logo outil Finances locales" src="../licence_logo/finances_locales_logo.png" align="middle" border="2" height="120" hspace="10" vspace="10" width="120"></a></td>
-    </tr>
-  </tbody>
-</table>
-
-<h2>Traçabilité<br>
-</h2>
-<b>Projet</b> : Finances locales sur le site <a href="http://thierry.maillard.pagesperso-orange.fr" target="_blank">Thierry Maillard</a><br>
-<b>Version</b> : ++VERSION++ du ++VERSION_DATE++<br>
-<b>Date de production des données</b> : ++DATE++<br><b>
-Lien projet</b> : <a target="_blank" href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales">https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales</a><br><b>
-Licence Projet</b> : <a href="http://www.gnu.org/licenses" target="_blank">GNU GPL version 3</a><br>
-<hr size="2" width="100%">
-<h3>Signification des colonnes du tableau suivant</h3>
-<ul>
-<li><i>Finances locales</i> donne accès aux données des communes
-en HTML pour consultation directe.</li>
-<li>Le <i>Wikicode</i> doit être considéré comme une ressource pour compléter Wikipédia.
-Il faut cependant éviter de copier l'ensemble du wikicode dans un article,
-mais prendre les parties les plus pertinentes en les référençant avec des
-sources secondaires (journaux par exemple), pour relier les données primaires
-du Ministère des finances avec des faits réels.</li>
-</ul>
-<hr size="2" width="100%">
-
-<h2>Liste des villes par ordre alphabétique</h2>
-<table border="1" cellpadding="2" cellspacing="2" height="68" width="100%">
-  <tbody>
-    <tr>
-      <th bgcolor="#ccffff" valign="top">Finances locales<br>
-      </thd>
-      <th bgcolor="#ccffff" valign="top">Wikicode<br>
-      </tthd>
-      <th bgcolor="#ccffff" valign="top">Région<br>
-      </th>
-      <th bgcolor="#ccffff" valign="top">Département<br>
-      </th>
-      <th bgcolor="#ccffff" valign="top">SIREN<br>
-      </th>
-    </tr>
-++LIGNES_GROUPEMENTS++
-    </tbody>
-</table>
-Si vous ne trouvez pas un groupement de communes, n'hésitez pas à me contacter : <a href="mailto:Thierry.MaillardCinqcents@orange.fr">Thierry.MaillardCinqcents@orange.fr</a>
-- (Ecrivez Cinqcents en chiffres).
-
-<hr size="2" width="100%"><br>
-Copyleft (c) <b>2015 - 2020 - <a href="http://thierry.maillard.pagesperso-orange.fr"  target="_blank">site de Thierry Maillard</a></b><br>
-Permission vous est donnée de copier, distribuer et/ou
-modifier ce document selon les termes de la Licence <b>GNU Free
-Documentation License</b>, Version 1.3 ou ultérieure publiée
-par la Free Software Foundation&nbsp;avec les sections inaltérables
-suivantes&nbsp;: <a href="http://www.gnu.org/licenses/fdl.html" target="_blank">GNU Free Documentation License</a>.<br>
-</body>
+<html dir="ltr" lang="fr">
+  <head>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <title>Groupements</title>
+  </head>
+  <body>
+    <meta content="Thierry46" name="author">
+    <meta content="Page d'accès à la liste des groupements de communes"
+      name="description">
+    <meta name="keywords" content="Finances locales, budget, groupements
+      de communes, taxes, taux, ratio, dépenses publiques, coûts">
+    <table cellspacing="2" cellpadding="2" border="1" bgcolor="#ffccff"
+      height="202" width="100%">
+      <tbody>
+        <tr>
+          <td valign="top"><a
+href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"><img
+                alt="Logo outil Finances locales"
+                src="../licence_logo/finances_locales_logo.png"
+                border="2" hspace="10" height="120" align="middle"
+                width="120" vspace="10"></a></td>
+          <td valign="top">
+            <h1 align="center">Projet Finances Locales</h1>
+            <h1 align="center">Groupements de communes</h1>
+          </td>
+          <td valign="top"><a
+href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"><img
+                alt="Logo outil Finances locales"
+                src="../licence_logo/finances_locales_logo.png"
+                border="2" hspace="10" height="120" align="middle"
+                width="120" vspace="10"></a></td>
+        </tr>
+      </tbody>
+    </table>
+    <h2>Traçabilité<br>
+    </h2>
+    <b>Projet</b> : Finances locales sur le site <a
+      href="http://thierry.maillard.pagesperso-orange.fr"
+      target="_blank">Thierry Maillard</a><br>
+    <b>Version</b> : ++VERSION++ du ++VERSION_DATE++<br>
+    <b>Date de production des données</b> : ++DATE++<br>
+    <b>
+      Lien projet</b> : <a target="_blank"
+href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales">https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales</a><br>
+    <b>
+      Licence Projet</b> : <a href="http://www.gnu.org/licenses"
+      target="_blank">GNU GPL version 3</a><br>
+    <hr width="100%" size="2">
+    <h3>Signification des colonnes du tableau suivant</h3>
+    <ul>
+      <li><i>Finances locales</i> donne accès aux données des communes
+        en HTML pour consultation directe.</li>
+      <li>Le <i>Wikicode</i> doit être considéré comme une ressource
+        pour compléter Wikipédia.
+        Il faut cependant éviter de copier l'ensemble du wikicode dans
+        un article,
+        mais prendre les parties les plus pertinentes en les référençant
+        avec des
+        sources secondaires (journaux par exemple), pour relier les
+        données primaires
+        du Ministère des finances avec des faits réels.</li>
+    </ul>
+    <hr width="100%" size="2">
+    <h2>Liste des villes par ordre alphabétique</h2>
+    ++LIGNES_GROUPEMENTS++
+    <table cellspacing="2" cellpadding="2" border="1" height="68"
+      width="100%">
+      <tbody>
+        <tr>
+          <th bgcolor="#ccffff" valign="top">Finances locales<br>
+          </th>
+          <th bgcolor="#ccffff" valign="top">Wikicode<br>
+          </th>
+          <th bgcolor="#ccffff" valign="top">Région<br>
+          </th>
+          <th bgcolor="#ccffff" valign="top">Département<br>
+          </th>
+          <th bgcolor="#ccffff" valign="top">SIREN<br>
+          </th>
+        </tr>
+      </tbody>
+    </table>
+    Si vous ne trouvez pas un groupement de communes, n'hésitez pas à me
+    contacter : <a href="mailto:Thierry.MaillardCinqcents@orange.fr">Thierry.MaillardCinqcents@orange.fr</a>
+    - (Ecrivez Cinqcents en chiffres).
+    <hr width="100%" size="2"><br>
+    Copyleft (c) <b>2015 - 2020 - <a
+        href="https://thierry-maillard.pagesperso-orange.fr"
+        target="_blank" moz-do-not-send="true">site de Thierry Maillard</a></b><br>
+    Permission vous est donnée de copier, distribuer et/ou
+    modifier ce document selon les termes de la Licence <b>GNU Free
+      Documentation License</b>, Version 1.3 ou ultérieure publiée
+    par la Free Software Foundation&nbsp;avec les sections inaltérables
+    suivantes&nbsp;: <a href="http://www.gnu.org/licenses/fdl.html"
+      target="_blank">GNU Free Documentation License</a>.<br>
+  </body>
 </html>
