--- a/unittest/test_index_groupement/index_groupement.html
+++ b/unittest/test_index_groupement/index_groupement.html
@@ -38,8 +38,8 @@ href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"><img
     <b>Projet</b> : Finances locales sur le site <a
       href="http://thierry.maillard.pagesperso-orange.fr"
       target="_blank">Thierry Maillard</a><br>
-    <b>Version</b> : 4.0.4 (Yin Yang Tau) du 28/12/2021<br>
-    <b>Date de production des données</b> : 28 December 2021<br>
+    <b>Version</b> : 4.1.0 (Yin Yang Tau) du 31/12/2021<br>
+    <b>Date de production des données</b> : 31 décembre 2021<br>
     <b>
       Lien projet</b> : <a target="_blank"
 href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales">https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales</a><br>
@@ -65,7 +65,7 @@ href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales">http
     <h2>Liste des villes par ordre alphabétique</h2>
     <tr>
 <td><a href="Communaute_de_Commune_du_Lot/Communaute_de_Commune_du_Lot_HTML.html" target="_blank">CC Lot (HTML)</a></td>
-<td><a href="Communaute_de_Commune_du_Lot/Communaute_de_Commune_du_Lot_wikicode.txt" target="_blank">Wiki</a></td>
+<td><a href="Communaute_de_Commune_du_Lot/Communaute_de_Commune_du_Lot_wikicode.html" target="_blank">Wiki</a></td>
 <td>Occitanie</td>
 <td>Lot</td>
 <td>256365</td>
