--- a/unittest/genCodeGroupementTexte.html
+++ b/unittest/genCodeGroupementTexte.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html dir="ltr" lang="fr">
 <!-- !!! Contenu généré automatiquement par l'outil Finances locales !!!
-    Généré le 28 December 2021 par le programme test_genCodeGroupementTexte (complet)
-    version 4.0.4 : Yin Yang Tau du 28/12/2021
+    Généré le 31 décembre 2021 par le programme test_genCodeGroupementTexte (complet)
+    version 4.1.0 : Yin Yang Tau du 31/12/2021
     et le modèle modele_groupement_HTML.txt pour l'article <NOM_ARTICLE_DETAIL>.
     En cas de problème, contactez-moi SVP : Thierry.Maillard500(at)orange.fr
     Additionnons nos forces, partageons nos connaissances ! -->
@@ -230,8 +230,8 @@ modifier ce document selon les termes de la Licence <b>GNU Free
 Documentation License</b>, Version 1.3 ou ultérieure publiée
 par la Free Software Foundation&nbsp;avec les sections inaltérables
 suivantes&nbsp;: <a href="http://www.gnu.org/licenses/fdl.html" target="_blank">GNU Free Documentation License</a>.<br>
-<!-- Fin de la page générée le 28 December 2021
-    par le programme test_genCodeGroupementTexte complet version 4.0.4 : Yin Yang Tau 
+<!-- Fin de la page générée le 31 décembre 2021
+    par le programme test_genCodeGroupementTexte complet version 4.1.0 : Yin Yang Tau 
     et le modèle modele_groupement_HTML.txt pour l'article <NOM_ARTICLE_DETAIL>.
     En cas de problème, contactez-moi SVP : Thierry.Maillard500(at)orange.fr -->
 </body>
