--- a/unittest/repGenCodeOutput/Departement_068/index.html
+++ b/unittest/repGenCodeOutput/Departement_068/index.html
@@ -40,8 +40,8 @@ href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"><img
     <b>Projet</b> : Finances locales sur le site <a
       href="http://thierry.maillard.pagesperso-orange.fr"
       target="_blank">Thierry Maillard</a><br>
-    <b>Version</b> : 4.0.4 (Yin Yang Tau) du 28/12/2021<br>
-    <b>Date de production des données</b> : 28 December 2021<br>
+    <b>Version</b> : 4.1.0 (Yin Yang Tau) du 31/12/2021<br>
+    <b>Date de production des données</b> : 31 décembre 2021<br>
     <b>
       Lien projet</b> : <a target="_blank"
 href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales">https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales</a><br>
