--- a/unittest/test_genIndexDepartement/Finances_Locales.html
+++ b/unittest/test_genIndexDepartement/Finances_Locales.html
@@ -44,8 +44,8 @@
     <h2>Informations</h2>
     <b>Projet</b> : Finances locales de <a href="https://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Accueil_principal"
       target="_blank">Wikipédia</a><br>
-    <b>Version</b> : 4.0.4 : Yin Yang Tau<br>
-    <b>Date de création</b> : 28 December 2021 - 18:02:22<br>
+    <b>Version</b> : 4.1.0 : Yin Yang Tau<br>
+    <b>Date de création</b> : 31 décembre 2021 - 10:38:06<br>
     <b>Lien projet</b> : <a target="_blank" href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales">https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales</a><br>
     <b>Licence Projet</b> : <a href="http://www.gnu.org/licenses" target="_blank">GNU
       GPL version 3</a><br>
@@ -93,7 +93,7 @@
         </tr>
  <tr>
 <td><a href="Departement_001/index.html" target="_blank">001</a></td>
-<td>03 November 2021 - 21:35:05</td>
+<td>03 novembre 2021 - 21:35:05</td>
 </tr>
 
       </tbody>
