--- a/modele_index_groupement_HTML.html
+++ b/modele_index_groupement_HTML.html
@@ -36,7 +36,7 @@ href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"><img
     <h2>Traçabilité<br>
     </h2>
     <b>Projet</b> : Finances locales sur le site <a
-      href="http://thierry.maillard.pagesperso-orange.fr"
+      href="https://thierry-maillard.pagesperso-orange.fr"
       target="_blank">Thierry Maillard</a><br>
     <b>Version</b> : ++VERSION++ du ++VERSION_DATE++<br>
     <b>Date de production des données</b> : ++DATE++<br>
@@ -63,7 +63,6 @@ href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales">http
     </ul>
     <hr width="100%" size="2">
     <h2>Liste des villes par ordre alphabétique</h2>
-    ++LIGNES_GROUPEMENTS++
     <table cellspacing="2" cellpadding="2" border="1" height="68"
       width="100%">
       <tbody>
@@ -79,13 +78,14 @@ href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales">http
           <th bgcolor="#ccffff" valign="top">SIREN<br>
           </th>
         </tr>
+    ++LIGNES_GROUPEMENTS++
       </tbody>
     </table>
     Si vous ne trouvez pas un groupement de communes, n'hésitez pas à me
     contacter : <a href="mailto:Thierry.MaillardCinqcents@orange.fr">Thierry.MaillardCinqcents@orange.fr</a>
     - (Ecrivez Cinqcents en chiffres).
     <hr width="100%" size="2"><br>
-    Copyleft (c) <b>2015 - 2020 - <a
+    Copyleft (c) <b>2015 - 2021 - <a
         href="https://thierry-maillard.pagesperso-orange.fr"
         target="_blank" moz-do-not-send="true">site de Thierry Maillard</a></b><br>
     Permission vous est donnée de copier, distribuer et/ou
