--- a/modele_index_ville_HTML.html
+++ b/modele_index_ville_HTML.html
@@ -38,7 +38,7 @@ href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales"><img
     <h2>Traçabilité<br>
     </h2>
     <b>Projet</b> : Finances locales sur le site <a
-      href="http://thierry.maillard.pagesperso-orange.fr"
+      href="https://thierry-maillard.pagesperso-orange.fr"
       target="_blank">Thierry Maillard</a><br>
     <b>Version</b> : ++VERSION++ du ++VERSION_DATE++<br>
     <b>Date de production des données</b> : ++DATE++<br>
@@ -64,7 +64,6 @@ href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales">http
         du Ministère des finances avec des faits réels.</li>
       <hr width="100%" size="2">
       <h2>Liste des villes par ordre alphabétique</h2>
-      ++LIGNES_VILLES++
       <table cellspacing="2" cellpadding="2" border="1" height="68"
         width="100%">
         <tbody>
@@ -78,14 +77,15 @@ href="https://fr.wikipedia.org/wiki/Utilisateur:Thierry46/Finances_Locales">http
             <th bgcolor="#ccffff" valign="top">Population<br>
             </th>
           </tr>
-        </tbody>
+       ++LIGNES_VILLES++
+       </tbody>
       </table>
       <p>Abbréviations :</p>
       Si vous ne trouvez pas une commune, n'hésitez pas à me contacter :
       <a href="mailto:Thierry.MaillardCinqcents@orange.fr">Thierry.MaillardCinqcents@orange.fr</a>
       - (Ecrivez Cinqcents en chiffres).
       <hr width="100%" size="2"><br>
-      Copyleft (c) <b>2015 - 2020 - <a
+      Copyleft (c) <b>2015 - 2021 - <a
           href="https://thierry-maillard.pagesperso-orange.fr"
           target="_blank" moz-do-not-send="true">site de Thierry
           Maillard</a></b><br>
